--- a/index.html
+++ b/index.html
@@ -122,6 +122,17 @@
                         <p>HTML/CSS/JavaScript</p>
                     </div>
                 </div>
+                <div class="side-project">
+                    <a href="https://github.com/TayHern/UCLA-Project-Swim-Tracker" target=_blank>
+                        <img src="./assets/images/led-wall.jpeg" alt="Project-Swim-Tracker" />
+                    </a>
+                    <div class="project-content">
+                        <h4>
+                            Project Harmony
+                        </h4>
+                        <p>HTML/CSS/JavaScript</p>
+                    </div>
+                </div>
             </div>
             </div>
         </section>
